--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@ What are you doing here?! you sneaky developer...
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#000">
-    <meta name="description" content="Vinod Jangid | Portfolio, Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." >
-    <meta name="keywords" content="vinod jangid, vinod jangid portfolio, Vinod Jangid Portfolio, vinodjangid, vinod jangid github, vinodjangid site, vinodjangid uiverse, uiverse, vinod jangid uiverse, vinod jangid frontend developer, frontend developer, vinod jangid jaipur, vinod jaipur" >
+    <meta name="description" content="Mohammed | Portfolio" >
+    <!-- <meta name="keywords" content="vinod jangid, vinod jangid portfolio, Vinod Jangid Portfolio, vinodjangid, vinod jangid github, vinodjangid site, vinodjangid uiverse, uiverse, vinod jangid uiverse, vinod jangid frontend developer, frontend developer, vinod jangid jaipur, vinod jaipur" >
     <meta name="author" content="Vinod Jangid" >
-    <meta property="og:image" content="https://www.vinodjangid.me/src/webp/vinod%20(2).webp" >
+    <meta property="og:image" content="https://www.vinodjangid.me/src/webp/vinod%20(2).webp" > -->
 <!-- 
     <meta property="og:title" content="" >
     
@@ -47,7 +47,7 @@ What are you doing here?! you sneaky developer...
     <meta name="twitter:image" content="" >
     <meta name="twitter:url" content="" >
     <meta name="twitter:card" content="" > -->
-    <title>Mohammed | Portfolio</title>
+    <title>Mohammed 🧑🏻‍💻| Portfolio</title>
     <link rel="icon" type="image/x-icon" href="src/jpg/profile-pic (3).png">
     <!-- aos cdn -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
