--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@ What are you doing here?! you sneaky developer...
                     <li class="about" class="navbar-tabs-li" data-aos="fade-down" data-aos-delay="300">&#60;/AboutMe&#62;</li></a>
                     <a href="#skills"aria-label="skills menu button">
                     <li class="skills" class="navbar-tabs-li"data-aos="fade-down" data-aos-delay="500">&#60;/Skills&#62;</li></a>
-                    <a href="#projects"aria-label="projects menu button">
-                    <li class="projects" class="navbar-tabs-li"data-aos="fade-down" data-aos-delay="700">&#60;/Projects&#62;</li></a>
+                    <!-- <a href="#projects"aria-label="projects menu button">
+                    <li class="projects" class="navbar-tabs-li"data-aos="fade-down" data-aos-delay="700">&#60;/Projects&#62;</li></a> -->
                     
                 </ul>
 
@@ -126,8 +126,8 @@ What are you doing here?! you sneaky developer...
                 <li id="aboutme-mobile-tab" class="mobile-navbar-tabs-li about"onclick="hidemenubyli()">&#60;/AboutMe&#62;</li></a>
                 <a href="#skills" tabindex="0" aria-label="skills menu button">
                 <li id="skills-mobile-tab" class="mobile-navbar-tabs-li skills"onclick="hidemenubyli()">&#60;/Skills&#62;</li></a>
-                <a href="#projects" tabindex="0" aria-label="projects menu button">
-                <li id="projects-mobile-tab" class="mobile-navbar-tabs-li projects" onclick="hidemenubyli()">&#60;/Projects&#62;</li></a>
+                <!-- <a href="#projects" tabindex="0" aria-label="projects menu button">
+                <li id="projects-mobile-tab" class="mobile-navbar-tabs-li projects" onclick="hidemenubyli()">&#60;/Projects&#62;</li></a> -->
                 
             </ul>
         </div>
