--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@ What are you doing here?! you sneaky developer...
 
 <script>
     function openURL() {
-    var url = "src/pdf/MohammedMatheen.docx.pdf";
+    var url = "src/pdf/resume.pdf";
 
     window.open(url, '_blank');
   }
